<resources>
    <string name="app_name">StatIsVictory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game">game</string>
    <string name="home">home</string>
    <string name="statsViews">statsViews</string>
    <string name="statsDisplay">statsDisplay</string>
    <string name="statsView">Stat</string>
    <string name="time_period">Time Period</string>
    <string name="player">player</string>
    <string name="preference_file_key" />
    <string name="jwt_token">com.example.myapp.PREFERENCE_FILE_KEY</string>
    <string name="your_name">Your Name</string>
    <string name="e_mail">Your Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="register">Register</string>
    <string name="tag">Stats are the foundation from which a team achieves it\'s greatest victory</string>
    <string name="login">Login</string>
    <string name="favourite_stats">Favourite Stats</string>
    <string name="log_out">Log Out</string>
    <string name="allStats">All</string>
    <string name="favourites">Favourites</string>
    <string name="submit">Submit</string>

</resources>