<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:background="@color/black"
    tools:context="com.example.bottomnavigationproper.LoginActivity">

    <TextView
        android:id="@+id/tv_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/green2"
        android:textSize="36sp"
        android:gravity="center" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:backgroundTint="@color/pink1"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="2dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/et_custom"
        android:backgroundTint="@color/pink1"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="2dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />



    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink4"
        android:textColor="@color/green3"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowRadius="5"
        android:shadowDy="5"
        android:text="Login"
        android:layout_margin="16dp"/>


    <Button
        android:id="@+id/navigate_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink4"
        android:textColor="@color/green3"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowRadius="5"
        android:shadowDy="5"
        android:text="Return to Register"
        android:layout_margin="16dp"/>

</LinearLayout>